--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="dashboard">
+    <app-root></app-root>
+    <hr>
+    <section>
+      <app-stars></app-stars>
+    </section>
+  </div>
 </body>
 </html>
